# hilbert-ps-proofchecker

./: README.md  Test  pyproject.toml  requirements.txt
doc/: TODO.md  explainer.md  hirst-exercises.md  hirst-notes.md  hirst-vs-HPS.md  hirst-vs-PS.md  logic.md
mypy-stubs/binarytree/: __init__.pyi  exceptions.pyi
src/: binarytree.pt  formula.pt  formula.py  lazyprop.pt  lazyprop.py  nodocF.py  nothing.pt  proof.pt  proof.py  range_test.pt  schema.pt  schema.py  unused.pt  unused.py
tool/: bench_range.py
